<resources>
    <string name="app_name">NewCalculator</string>
    <string name="users_name_sent_back">users_name_sent_back</string>
    <string name="get_the_name_text_view">get the name</string>
    <string name="enter_name_text_view">enter name</string>
    <string name="calling_activity_message">calling_activity_message</string>
    <string name="numfield">just so I can see it</string>

    <!-- Calc Buttons -->
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnEnter">Enter</string>
    <string name="btnPlus">+</string>
    <string name="btnComma">,</string>
    <string name="btnNeg">(-)</string>
    <string name="btnDiv">/</string>
    <string name="btnPeriod">.</string>
    <string name="btnDel">del</string>
    <string name="btnMinus">-</string>
    <string name="btnCarrot">^</string>
    <string name="btnTimes">x</string>
    <string name="btnLog">log</string>
    <string name="btnSquare">x^2</string>
    <string name="btnParenR">(</string>
    <string name="btnParenL">)</string>
    <string name="btnTan">tan</string>
    <string name="btnCos">cos</string>
    <string name="btnSin">sin</string>
    <string name="btnNeg1">x^-1</string>
    <string name="btnProb">alpha</string>
    <string name="btnMath">math</string>
    <string name="btnPer">per</string>
    <string name="btnClear">clear</string>
    <string name="title_activity_login">Sign in</string>

    <!--Strings Related to Math-->
    <string name="btnLCD">lcd</string>
    <string name="btnGCD">gdc</string>
    <string name="btnCube">^3</string>
    <string name="btnCubeRT">CubeRoot</string>
    <string name="btnABS">abs</string>
    <string name="btnRound">round</string>
    <string name="btniPart">iPart</string>
    <string name="btnfPart">fPart</string>
    <string name="btnMin">min</string>
    <string name="btnMax">max</string>
    <string name="btnMin">min</string>

    <!-- Strings Related to Prob-->
    <string name="btnnPr">nPr</string>
    <string name="btnnCr">nCr</string>
    <string name="btnEx">!</string>
    <string name="btnRand">rand</string>
    <string name="btnRandInt">randint</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--<string name=""></string>-->


</resources>
