<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="left"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_name_text_view"/>

        <EditText
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:id="@+id/users_name_edit_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter"
            android:onClick="onSendUsersName"/>

        <TextView
            android:id="@+id/calling_activity_info_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calling_activity_message"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAlpha"
            android:id="@+id/btnAlpha"
            android:onClick="onAlpha"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMath"
            android:id="@+id/btnMath"
            android:onClick="onMath"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnStat"
            android:id="@+id/btnStat"
            android:onClick="onStat"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnClear"
            android:id="@+id/btnClear"
            android:onClick="onClear"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNeg1"
            android:id="@+id/btnNeg1"
            android:onClick="onNeg1"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSin"
            android:id="@+id/btnSin"
            android:onClick="onSin"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCos"
            android:id="@+id/btnCos"
            android:onClick="onCos"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnTan"
            android:id="@+id/btnbtnTan"
            android:onClick="onTan"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSquare"
            android:id="@+id/btnSquare"
            android:onClick="onSquare"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnParenR"
            android:id="@+id/btnParenR"
            android:onClick="onParenR"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnParenL"
            android:id="@+id/btnParenL"
            android:onClick="onParenL"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDiv"
            android:id="@+id/btnDiv"
            android:onClick="onDiv"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btnLog"
            android:id="@+id/btnLog"
            android:onClick="onLog"
            />
        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btn7"
            android:id="@+id/btn7"
            android:onClick="on7"
            />
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/btn8"
            android:id="@+id/btn8"
            android:onClick="on8"
            />
        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btn9"
            android:id="@+id/btn9"
            android:onClick="on9"
            />
        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btnTimes"
            android:id="@+id/btnTimes"
            android:onClick="onTimes"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btnCarrot"
            android:id="@+id/btn"
            android:onClick="onCarrot"
            />
        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btn4"
            android:id="@+id/btn4"
            android:onClick="on4"
            />
        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btn5"
            android:id="@+id/btn5"
            android:onClick="on5"
            />
        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btn6"
            android:id="@+id/btn6"
            android:onClick="on6"
            />
        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btnMinus"
            android:id="@+id/btnMinus"
            android:onClick="onMinus"
            />
    </LinearLayout>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btnDel"
        android:id="@+id/btnDel"
        android:onClick="ondel"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn1"
        android:id="@+id/btn1"
        android:onClick="on1"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn2"
        android:id="@+id/btn2"
        android:onClick="on2"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn3"
        android:id="@+id/btn3"
        android:onClick="on3"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btnPlus"
        android:id="@+id/btnPlus"
        android:onClick="onPlus"
        />
</LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btnComma"
            android:id="@+id/btnComma"
            android:onClick="onComma"
            />
        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btn0"
            android:id="@+id/btn0"
            android:onClick="on0"
            />
        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btnPeriod"
            android:id="@+id/btnPeriod"
            android:onClick="onPeriod"
            />
        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btnNeg"
            android:id="@+id/btnNeg"
            android:onClick="onNeg"
            />
        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btnEnter"
            android:id="@+id/btnEnter"
            android:onClick="onEnter"
            />
    </LinearLayout>

</LinearLayout>