<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

</LinearLayout>

    <?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="vertical"
android:gravity="left"
android:padding="20dp">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">



    <EditText
        android:id="@+id/users_name_edit_text"
        android:windowSoftInputMode="stateHidden"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@+id/users_name_edit_text"
        />

</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="10dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter"
        android:onClick="onSendUsersName"/>

</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nPr"
        android:id="@+id/nPr"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnnCr"
        android:id="@+id/btnnCr"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEx"
        android:id="@+id/btnEx"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRand"
        android:id="@+id/btnRand"
        android:onClick="onClick"
        />
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRandInt"
        android:id="@+id/btnRandInt"
        android:onClick="onClick"
        />
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnParenR"
        android:id="@+id/btnParenR"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnParenL"
        android:id="@+id/btnParenL"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDiv"
        android:id="@+id/btnDiv"
        android:onClick="onClick"
        />
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btnLog"
        android:id="@+id/btnLog"
        android:onClick="onLog"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn7"
        android:id="@+id/btn7"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn8"
        android:id="@+id/btn8"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn9"
        android:id="@+id/btn9"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="*"
        android:id="@+id/btnTimes"
        android:onClick="onClick"
        />
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btnMax"
        android:id="@+id/Max"
        android:onClick="onMax"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn4"
        android:id="@+id/btn4"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn5"
        android:id="@+id/btn5"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn6"
        android:id="@+id/btn6"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btnMinus"
        android:id="@+id/btnMinus"
        android:onClick="onClick"
        />
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btnDel"
        android:id="@+id/btnDel"
        android:onClick="onDel"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn1"
        android:id="@+id/btn1"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn2"
        android:id="@+id/btn2"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn3"
        android:id="@+id/btn3"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btnPlus"
        android:id="@+id/btnPlus"
        android:onClick="onClick"
        />
</LinearLayout>


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btnComma"
        android:id="@+id/btnComma"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn0"
        android:id="@+id/btn0"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btnPeriod"
        android:id="@+id/btnPeriod"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="-"
        android:id="@+id/btnNeg"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btnEnter"
        android:id="@+id/btnEnter"
        android:onClick="onEnter"
        />
</LinearLayout>

</LinearLayout>